--- a/main1.html
+++ b/main1.html
@@ -305,7 +305,7 @@
                                 5. Check randomly a few articles delivered at the BO (including eMO) using Postinfo
                                 mobile app or through the device backup to confirm that the delivery status has been
                                 updated
-                                <select name="checkDeliveryStatus">
+                                <select name="checkDeliveryStatus1">
                                     <option value="Yes">Yes</option>
                                     <option value="No">No</option>
                                 </select>
